# torcpy

./: .gitignore  404.html  README.md  alembic.ini  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: e41603ce228e_initial_schema.py
concepts/: index.html
concepts/architecture/: index.html
concepts/dependencies/: index.html
concepts/job-states/: index.html
concepts/parameterization/: index.html
concepts/resources/: index.html
concepts/workflow-spec/: index.html
design/: index.html
design/architecture/: index.html
design/client/: index.html
design/database/: index.html
design/dependency-graph/: index.html
design/job-runner/: index.html
design/server/: index.html
docs/: index.md
docs/assets/: extra.css
docs/concepts/: architecture.md  dependencies.md  index.md  job-states.md  parameterization.md  resources.md  workflow-spec.md
docs/design/: architecture.md  client.md  database.md  dependency-graph.md  index.md  job-runner.md  server.md
docs/getting-started/: index.md  installation.md  quick-start-local.md  quick-start-server.md
docs/how-to/: cancel-workflow.md  debug-failed-job.md  index.md  parameterize-with-files.md  rerun-failed-jobs.md  set-resources.md  track-status.md  use-python-library.md
examples/: parameterized_workflow.yaml  sample_workflow.yaml  simple_dag.yaml
getting-started/: index.html
how-to/: index.html
monitoring/: index.html
reference/: index.html
search/: search_index.json
tests/: conftest.py
tutorials/: index.html
(+99 files in other folders)
